evolute.css
/* ... */
/************Menu item selected*************/

.dashboard a#agreementLink {
    color: #00ade1 !important;
}

/*     home/leadstore bullets     */
.dashboard ul.leadstore_bullets{
    list-style: inside;
}

.dashboard #accountMgmtContainer{
    display: flex;
    flex-direction: column;
    gap: 12px;
    width: 100%;
    margin: 6px;
}

.dashboard #accountMgmtContainer label{
    width: 100%;
}

.dashboard .grid_75_25 {
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 20px;
}

.dashboard .submitButton{
    display: flex;
}

/*     order creation date dropdown width     */
.dashboard .proposal-settings-amt-dt:is(#endDateDiv, #startDateDiv) > select{
    width: auto !important;
    min-width: 250px !important;
    max-width: unset !important;
}

.dashboard #filterByState, #filterByZip{
    margin: 5px;
}

/* volume guidance*/
.dashboard #volumeGuidanceBar{
    width: 100% !important;
    float: unset;
    margin-right: 0px !important;
}

.dashboard #volumeGuidanceDiv{
    width: 100% !important;
}

/**** Links underline ****/

.dashboard #MainContent a:not( .buttonGroup a,
                    #settingssubnav a,
                    .pagination a, 
                    th a, 
                    .yui-button a,
                    #bidgridTabs a, 
                    .reportLink2, 
                    .oliDiv .right a,
                    .addLink a,
                    .integration-support a),
.dashboard #reportLink,
.dashboard #sidebar a,
.dashboard tbody td a ,
.dashboard h2 a,
.dashboard .inputGroup a,
.dashboard .linkSpan
{
  color: var(--color-primary) !important;
  text-decoration: underline !important;
  text-decoration-color: var(--color-primary) !important;
  text-decoration-thickness: 1px !important;
  font-weight: 500 !important;
}

.dashboard th a {
    color: var(--color-primary) !important;
    text-decoration: unset !important;
    font-weight: 600 !important;
}

.dashboard th a:hover {
  text-decoration: underline !important;
  text-decoration-color: var(--color-primary) !important;
}

/********/

.dashboard .blueBox img.sidebar,
.dashboard .wizard-integration-details img.sidebar {
        display: block;
        margin: 0 auto 16px;
}

.dashboard .volumeGuidanceDiv{
    position: relative !important;
}

.dashboard #price-grid-head th{
    border: none !important;
    text-wrap-mode: wrap !important;
}

.dashboard table.pricegrid{
    table-layout: fixed;
}

/** Reports **/

.dashboard .filter:is(.flex-col-20, .flex-row-20) .inputGroup{
    padding: 0 !important;
}

.dashboard form.detail .filter:is(.flex-col-20, .flex-row-20){
    align-items: center !important;
}

.dashboard .reports #PrimaryContent > table#report{
    display: contents;
}

.dashboard .reports table#report tbody tr, .dashboard .reports table.reportResults tbody tr{
    display: table-row !important;
}

.dashboard .reports table#report tbody td, .dashboard .reports table.reportResults tbody td{
    display: table-cell !important;
}

.dashboard .reports .filter .inputGroup{
    min-width: unset !important;
    max-width: unset !important;
}

.dashboard .formSectionContent .options{
    width: auto !important;
}

.dashboard table#report td.rptHeaderCenter, table#report td.rptHeaderLeft, table.bodyListing th {
    background: rgb(30, 58, 95);
}

.dashboard .reports table#report.reportResults td.rptDataLeft{
    background-color: unset !important;
    color: var(--color-primary) !important;
}

.dashboard .reports table#report.reportResults td{
    padding: 2px !important;
}

.dashboard .reports>#PrimaryContent{
    display: block;
}

.dashboard .reports .rptHeaderCenter a img, .dashboard .reports .rptHeaderLeft a img, .dashboard .reports .rptHeaderRight a img{
    width: 20px !important;
    height: 20px !important;
}

.product-opts{
    padding: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px
}


/**   order tracking   **/
.dashboard #settingsContainer .inputGroup .options:is(#httpTrackingOptionContainer, #xmlTrackingOptionContainer, #customTrackingOptionContainer, #noCustomTrackingOptionContainer){
    display: block !important;
}
 
.dashboard #settingsContainer .inputGroup .options.hidden-tracking-option:is(#httpTrackingOptionContainer, #xmlTrackingOptionContainer, #customTrackingOptionContainer, #noCustomTrackingOptionContainer){
    display: none !important;
}

.dashboard #bidoptions select, .dashboard .channels select:is(#xmlOrderTrackingName){
    min-width: unset !important;
    max-width: unset !important;
}

/*** settings custom brand ***/
.dashboard ul.cb-tabs.yui-nav{
    padding-top: 10px;
}

.dashboard ul.cb-tabs.yui-nav > li{
    padding: 10px 20px;
    border-radius: 10px 10px 0 0;
    border: solid 1px var(--color-primary);
    color: var(--color-white) !important;
    background: var(--color-primary);
    margin:0 !important;
}

.dashboard ul.cb-tabs.yui-nav > li:is(.selected){
    background: var(--color-orange)
}

.dashboard ul.cb-tabs.yui-nav > li > a >em{
    color: var(--color-white) !important
}

.dashboard ul.cb-tabs.yui-nav > li:not(.selected):hover{
    background: var(--color-bg-light)
}

.dashboard ul.cb-tabs.yui-nav > li:not(.selected):hover >a >em{
    color: var(--color-primary) !important;
}

.dashboard #searchFieldDiv{
    max-width: 270px;
}

/** Report scheduling **/
.dashboard .weekly-radio-dropdown {
  display: flex;
  align-items: center;
  gap: 8px;
}

.dashboard .weekly-radio-dropdown input[type="radio"] {
  flex: 0 0 auto;
}

.dashboard .weekly-radio-dropdown label {
  flex: 1;
  margin: 0;
  min-width: max-content;
}

.dashboard .weekly-radio-dropdown select {
  flex: 0 0 auto;
  max-width: 150px;
}

/* ========== LEAD CHANNEL DETAIL ========== */
.dashboard .sectionHeader.channelInfo,
.dashboard .sectionHeader.channelSettings {
    display: flex;
    gap: 2px;
    border-bottom: 1px solid var(--border) !important;
    padding: unset !important
}
/* ... */

